# AnimeQuoteVideo

./: .gitignore  README-EN.md  README.md  main.py  pyproject.toml  quote-cache.db  quotesanimevideo.ipynb
animequotevideo/models/: quote.py
animequotevideo/repositories/: images.py  quoteapi.py  quotecache.py  quoterepository.py
animequotevideo/video/: answer.py  authorscolumn.py  base.py  default.py  needquote.py  quiz.py  quote.py  timer.py  video.py
